--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="face">
         <div class="eye"></div>
       </div>
-      <div class="title">You are so cute &#10084;</div>
+      <div class="title">I love you &#10084;</div>
     </div>
   </body>
 </html>
